# tweet-sentiment-extraction

./: .gitignore  Dockerfile  LICENSE  README.md  analyze_latency.ipynb  app.py  model.py  module.py  pyproject.toml  test_inference.py  test_model.py  test_workflow.ipynb
tests/: test_app.py  test_inference.py  test_model.py
training/: inference_test.ipynb  model_training.ipynb
tweet_sentiment_service/: app.py  inference.py
