[tool.poetry]
name = "tweet-sentiment-extraction"
version = "0.1.0"
description = "Dependencies for locally testing application"
authors = ["cavalcantp <cavalcantspedro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.5"
fastapi = "0.115.4"         # Compatible with Python 3.9
uvicorn = "0.22.0"
httpx = "0.27.2"
starlette = "0.41.2"
anyio = "4.6.2.post1"
requests = "2.32.3"
pandas = "^1.3.5"           # Compatible with TensorFlow 2.7.0 and Python 3.9
scikit-learn = "^0.24.2"    # Compatible with Python 3.9 and TensorFlow 2.7.0
transformers = "4.12.5"     # Compatible with TensorFlow 2.7.0 and Python 3.9
tokenizers = "0.10.3"       # Compatible with Transformers 4.12.5 and Python 3.9
tensorflow = "2.7.0"        # Fixed as per requirement
numpy = "^1.21.6"
protobuf = "3.19.4"
h5py = "3.1.0"
sentencepiece = "^0.2.0"

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.5"
pytest = "^8.3.3"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

